# Robust-Portfolio-Analytics-and-Model-Governance-under-Distribution-Shift

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  revised_robust_portfolio_paper.tex
configs/: base.yaml
data/: README.md
scripts/: generate_notebook.py  normalize_notebook_metadata.py  run_backtest.py
src/: __init__.py  backtest.py  baselines.py  config.py  corruption.py  covariance.py  data.py  features.py  monitoring.py  regime.py  reporting.py  robust.py  selection.py  targets.py  validation.py
tests/: conftest.py  test_backtest.py  test_monitoring.py  test_regime.py  test_robust.py  test_validation.py
